manifest/server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdbuiserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gdbuiserver
  template:
    metadata:
      labels:
        app: gdbuiserver
    spec:
      containers:
        - name: gdbuiserver
          image: shubh197/gdbuiserver:dev
          ports:
            - containerPort: 10000
