manifest/server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gdbuiserver-service
spec:
  selector:
    app: gdbuiserver
  ports:
    - port: 10000
      targetPort: 10000
  type: ClusterIP
