manifest/webapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gdbuiwebapp-service
spec:
  selector:
    app: gdbuiwebapp
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
