manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gdbui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gdbui.local
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: gdbuiwebapp-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gdbuiserver-service
                port:
                  number: 10000
